<resources>
    <string name="app_name">BudgetingIGo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Login</string>
    <string name="second_fragment_label">Budgeting I Go</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="email_password_title_text">Email and Password</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify</string>
    <string name="reload">Reload</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="model_image">Image of the budgeting model</string>
    <string name="model_description_label">Description %s</string>
    <string name="budgeting_models">Budgeting models</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_amount_label">Add amount</string>
    <string name="product_size_label">Size %d</string>
    <string name="budgeting_selected">Budgeting Model selected</string>
    <string name="i_want_to_start_with_this_model">I want to start with this model</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_income">Add income</string>
    <string name="concept_percentage_breakdown">%s / %d : %f</string>
    <string name="save_expense">Save expense</string>
    <string name="description">Description</string>
    <string name="concept">Concept:</string>
    <string name="expense">Expense</string>
    <string name="concepts_according_to_percentages">Concepts according to percentages:</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="icon">icon</string>
    <string name="save_income">Save income</string>
    <string name="income">Income</string>
    <string name="_0_0">0.0</string>
    <string name="monthly_summary_by_concept">Monthly summary by concept</string>
    <string name="last_ten_movements">Last ten movements</string>
    <string name="balances_chart">Balances chart</string>
    <string name="incomes">Incomes:</string>
    <string name="previous_balance">Previous balance:</string>
    <string name="expenses">Expenses:</string>
    <string name="current_balance">Current balance:</string>
    <string name="current_model">Current model</string>
    <string name="amount">Amount</string>
    <string name="plus_sign">+</string>
</resources>