<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ListMovementsFragment">

        <TextView
            android:id="@+id/modelNameText"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:text="Delicate" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movementsList"
            android:layout_width="342dp"
            android:layout_height="537dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:listitem="@layout/movements_item" />

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/incomeBtn" />

        <Button
            android:id="@+id/incomeBtn"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/income"
            android:textSize="20sp"
            android:textStyle="bold"
            app:icon="@drawable/icons8_plus_math_30"
            app:iconGravity="top"
            app:layout_constraintEnd_toStartOf="@+id/expenseBtn"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/expenseBtn"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/expense"
            android:textSize="20sp"
            app:icon="@drawable/_74118"
            app:iconGravity="top"
            app:iconPadding="0dp"
            app:iconSize="@dimen/fab_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/incomeBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider2"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/incomesTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginTop="8dp"
            android:text="@string/_0_0"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modelNameText" />

        <TextView
            android:id="@+id/prevBalance"
            android:layout_width="74dp"
            android:layout_height="26dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="8dp"
            android:text="@string/_0_0"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/incomesTV" />

        <TextView
            android:id="@+id/expensesTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginTop="8dp"
            android:text="@string/_0_0"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prevBalance" />

        <TextView
            android:id="@+id/currentBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginTop="8dp"
            android:text="@string/_0_0"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expensesTV" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/monthly_summary_by_concept"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="55dp"
            android:layout_height="112dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:srcCompat="@drawable/four_40_25_25_10"
            android:contentDescription="@string/balances_chart" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/last_ten_movements"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <View
            android:id="@+id/divider3"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="220dp"
            android:text="@string/incomes"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modelNameText" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="220dp"
            android:text="@string/previous_balance"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="220dp"
            android:text="@string/expenses"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="220dp"
            android:text="@string/current_balance"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/current_model"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>