<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.budgetingigo.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_listMovementsFragment"
            app:destination="@id/listMovementsFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_signupFragment"
            app:destination="@id/signupFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.budgetingigo.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.budgetingigo.DetailFragment"
        android:label="@string/budgeting_selected"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_detailFragment_to_incomeFragment"
            app:destination="@id/incomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/incomeFragment"
        android:name="com.example.budgetingigo.IncomeFragment"
        android:label="Add income"
        tools:layout="@layout/fragment_income" >
        <action
            android:id="@+id/action_incomeFragment_to_listMovementsFragment"
            app:destination="@id/listMovementsFragment" />
    </fragment>
    <fragment
        android:id="@+id/listMovementsFragment"
        android:name="com.example.budgetingigo.ListMovementsFragment"
        android:label="Home" >
        <action
            android:id="@+id/action_listMovementsFragment_to_incomeFragment"
            app:destination="@id/incomeFragment" />
        <action
            android:id="@+id/action_listMovementsFragment_to_expenseFragment"
            app:destination="@id/expenseFragment" />
    </fragment>
    <fragment
        android:id="@+id/expenseFragment"
        android:name="com.example.budgetingigo.ExpenseFragment"
        android:label="Add an expense"
        tools:layout="@layout/fragment_expense" >
        <action
            android:id="@+id/action_expenseFragment_to_listMovementsFragment"
            app:destination="@id/listMovementsFragment" />
    </fragment>
    <fragment
        android:id="@+id/signupFragment"
        android:name="com.example.budgetingigo.SignupFragment"
        android:label="Sign up" >
        <action
            android:id="@+id/action_signupFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>